2004-03-06  Aaron Stone <aaron@serendipity.cx>
	* md5.h: removed an old hack that actually broke 32 bit assumptions
	by making wrong assumptions (they may have been correct circa 1993).

2004-03-05  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_check_user_ext): uses lower(alias) to find
	the alias. This makes sure that searching for aliases is always done
	case-insensitively.

2004-03-04  Aaron Stone <aaron@serendipity.cx>
	* pipe.c (resolve_deliveries): moved to dsn.c, renamed, not static.
	* dsn.c (dsnuser_resolve_list): newly relocated from pipe.c.
	* dsn.h: added enum types for dsn class, updated structs to match.
	* lmtp.c: modified the delivery resolution loop to first call
	dsnuser_resolve_list and then to directly check for DSN_STATUS_OK
	rather than less reliable heuristics.
	* lmtp.c: replaced clumsy pointer math with a call to find_bounded,
	thereby also fixing a crash bug and a memory leak both relating to
	malformatted "mail from" commands.
	* lmtp.c (lmtp_handle_connection): added calls to lmtp_reset to ensure
	that memory held in the session struct is freed/zeroed when finished.
	* main.c: added a call to dsnuser_resolve_list.

2004-03-03  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_get_msgdate): uses the date2char function to construct a 
	TO_CHAR (PostgreSQL) or DATE_FORMAT (MySQL) string. 
	(db_get_msginfo_range):  uses the date2char function to construct a 
	TO_CHAR (PostgreSQL) or DATE_FORMAT (MySQL) string. 
	(date2char_str): construct date formatter for use in queries. This
	will always output the same format of date
	(char2date_str): construct date formatter for use in queries. This
	will make the database always handle the same format of date.
	(db_insert_physmessage): inserts the CURRENT_TIMESTAMP instead of
	making the timestamp using libc() calls.

2004-03-02  Ilja Booij  <ilja@ic-s.nl>

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: alter internal_date 
	field in physmessage. This is now a TIMESTAMP WITHOUT TIME ZONE column.
