@@ -6,6 +6,10 @@
 /* Define as __inline if that's what the C compiler calls it.  */
 #undef inline
 
+/* Define if your processor stores words with the most significant
+   byte first (like Motorola and SPARC, unlike Intel and VAX).  */
+#undef WORDS_BIGENDIAN
+
 /* Define if you have the <crypt.h> header file.  */
 #undef HAVE_CRYPT_H
 
