@@ -48,6 +48,7 @@ AM_CONDITIONAL(MYSQL, [test -n "$MYSQLINC"])
 AM_CONDITIONAL(PGSQL, [test -n "$PGSQLINC"])
 AM_CONDITIONAL(SIEVE, [test -n "$SIEVEINC"])
 AM_CONDITIONAL(LDAP, [test -n "$LDAPINC"])
+AC_C_BIGENDIAN
 AC_CHECK_HEADERS(endian.h)
 AC_CHECK_HEADERS(crypt.h)
 AC_SUBST(SQLLIB)
